# P2P-Backup

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  tasks.py
.github/workflows/: release.yml
core-go/: go.mod  go.sum
core-go/cmd/encoder/: main.go
core-go/pkg/erasure/: coding.go
core-go/pkg/storage/: disk.go
installer/: setup.iss
manager-python/: main.py
manager-python/app/: config.py  daemon_main.py  entrypoints.py  launch_daemon.py  launch_gui.py
manager-python/app/services/: discovery_service.py  go_bridge.py  recovery_engine.py  shard_index.py  usb_finder.py  usb_watcher.py
manager-python/app/ui/: gui.py  ready_files_gui.py
packaging/: daemon.spec  gui.spec
scripts/: install-daemon-task.ps1
